--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+
 }
 
 html {
@@ -11,7 +14,7 @@ html {
 
 body {
     font-family: 'Work Sans', sans-serif;
-    background-color: var(--main-color);
+    /* background-color: var(--main-color); */
 }
 
 ul {
@@ -25,18 +28,21 @@ ul {
     margin-bottom: auto;
 }
 
+/*small*/
 @media (min-width:768px) {
     .container {
         width: 750px;
     }
 }
 
+/*medium*/
 @media (min-width:992px) {
     .container {
         width: 970px;
     }
 }
 
+/*large*/
 @media (min-width:1200px) {
     .container {
         width: 1170px;
