--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,12 @@ ul {
 /* start header  */
 header {}
 
-header {}
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
 
 /* end header  */
 /* start landing */
