--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* start variables */
+:root {
+    --main-color: #19c8fa;
+}
+
+/* end variables */
 /* start gloobal rouls */
 * {
     -webkit-box-sizing: border-box;
@@ -58,6 +64,42 @@ header .container {
     justify-content: space-between;
     align-items: center;
     position: relative;
+}
+
+header .container::after {
+    content: "";
+    position: absolute;
+    height: 1px;
+    background-color: #a2a2a2;
+    bottom: 0;
+    width: calc(100% - 30px);
+    left: 15px;
+}
+
+header .logo img {
+    height: 40px;
+}
+
+header nav {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+header nav ul {
+    display: flex;
+}
+
+header nav ul li a {
+    padding: 40px 10px;
+    display: block;
+    color: black;
+    text-decoration: none;
+    font-size: 14px;
+    transition: 0.3s;
+
+
 }
 
 /* end header  */
