--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ ul {
 
 /* :End components */
 /* start header  */
-header {}
+/* header {} */
 
 header .container {
     display: flex;
@@ -800,3 +800,36 @@ header nav .form i {
 }
 
 /*End Skills*/
+/*Start Quote*/
+
+.quote {
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+    background-image: url("../images/shuffle-04.jpg");
+    background-size: cover;
+    position: absolute;
+    text-align: center;
+    color: white;
+}
+
+.quote::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 75%);
+}
+
+.quote .container {
+    position: relative;
+}
+
+.quote q {
+    font-size: 30px;
+    margin-bottom: 20px;
+    display: block;
+}
+
+/*End Quote*/
