--- a/css/style.css
+++ b/css/style.css
@@ -1082,6 +1082,14 @@ header nav .form i {
     flex-basis: 25%;
 }
 
+@media (max-width:767px) {
+    .contact .content .info {
+        order: -1;
+        text-align: center;
+    }
+
+}
+
 .contact .content .info h4 {
     text-transform: uppercase;
     margin-bottom: 30px;
@@ -1100,9 +1108,82 @@ header nav .form i {
     margin-top: 90px;
 }
 
+@media (max-width:767px) {
+    .contact .content .info h4:nth-of-type(2) {
+
+        margin-top: 30px;
+    }
+
+}
+
 .contact .content .info address {
     color: #777;
     line-height: 2;
 }
 
+@media (max-width:767px) {
+    .contact .content .info address {
+
+        margin-bottom: 30px;
+    }
+
+}
+
 /* End Contact Us */
+
+/* Start Footer */
+.footer {
+
+    padding-top: calc(var(--section-padding)/2);
+    padding-bottom: calc(var(--section-padding)/2);
+    background-image: url("../images/shuffle-04.jpg");
+    background-size: cover;
+    position: relative;
+    color: white;
+    text-align: center;
+
+}
+
+.footer::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 70%);
+}
+
+.footer .container {
+    position: relative;
+}
+
+.footer img {
+    height: 40px;
+    margin-bottom: 20px;
+}
+
+.footer p:not(.copyright) {
+    text-transform: uppercase;
+    padding: 20px;
+    border-bottom: 1px solid white;
+    font-size: 22px;
+    width: fit-content;
+    margin: 20px auto;
+}
+
+.footer .social-icons i {
+    padding: 10px 15px;
+}
+
+.footer .copyright {
+    margin-top: 60px;
+
+}
+
+.footer .copyright span {
+    font-weight: bold;
+    color: var(--main-color);
+}
+
+/* End Footer */
