--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ ul {
 
 /* :End components */
 /* start header  */
-/* header {} */
+header {}
 
 header .container {
     display: flex;
@@ -179,8 +179,8 @@ header nav ul li a {
 
 header nav ul li a.active,
 header nav ul li a:hover {
-    color: var(--transparent-color);
-    border-bottom: 1px solid var(--transparent-color);
+    color: var(--main-color);
+    border-bottom: 1px solid var(--main-color);
 
 }
 
@@ -207,7 +207,7 @@ header nav .form i {
 .landing {
     min-height: 100vh;
     background-color: #1f2021;
-    background-image: url('https://via.placeholder.com/100');
+    background-image: url('../images/landing.jpg');
     background-size: cover;
     position: relative;
 }
@@ -300,8 +300,8 @@ header nav .form i {
 }
 
 .landing .bullets li.active {
-    background-color: var(--transparent-color);
-    border-color: var(--transparent-color);
+    background-color: var(--main-color);
+    border-color: var(--main-color);
 }
 
 
@@ -345,7 +345,7 @@ header nav .form i {
 
 .services .srv-box h3 {
     margin-bottom: 30px;
-    color: var(--transparent-color);
+    color: var(--main-color);
 }
 
 .services .srv-box p {
@@ -360,7 +360,7 @@ header nav .form i {
     padding-bottom: var(--section-padding);
     height: 600px;
     position: relative;
-    background-image: url('https://via.placeholder.com/100');
+    background-image: url('../images/aa.jpg');
     background-size: cover;
     display: flex;
     align-items: center;
